graphql-parser/tests/snapshots/test__parse_schema__implements_amp.snap
---
source: graphql-parser/tests/test.rs
expression: result_unix
---
Ok(
    Document {
        definitions: [
            TypeDefinition(
                Object(
                    ObjectType {
                        position: Pos(1:1),
                        description: None,
                        name: "Type1",
                        implements_interfaces: [
                            "IOne",
                            "ITwo",
                        ],
                        directives: [],
                        fields: [],
                    },
                ),
            ),
            TypeDefinition(
                Object(
                    ObjectType {
                        position: Pos(2:1),
                        description: None,
                        name: "Type2",
                        implements_interfaces: [
                            "IOne",
                        ],
                        directives: [],
                        fields: [],
                    },
                ),
            ),
        ],
    },
)
