graphql-parser/tests/snapshots/test__parse_schema__interface.snap
---
source: graphql-parser/tests/test.rs
expression: result_unix
---
Ok(
    Document {
        definitions: [
            TypeDefinition(
                Interface(
                    InterfaceType {
                        position: Pos(1:1),
                        description: None,
                        name: "Bar",
                        directives: [],
                        fields: [
                            Field {
                                position: Pos(2:3),
                                description: None,
                                name: "one",
                                arguments: [],
                                field_type: NamedType(
                                    "Type",
                                ),
                                directives: [],
                            },
                        ],
                    },
                ),
            ),
        ],
    },
)
