graphql-parser/tests/snapshots/test__parse_schema__minimal_schema.snap
---
source: graphql-parser/tests/test.rs
expression: result_unix
---
Ok(
    Document {
        definitions: [
            SchemaDefinition(
                SchemaDefinition {
                    position: Pos(1:1),
                    directives: [],
                    query: Some(
                        "Query",
                    ),
                    mutation: None,
                    subscription: None,
                },
            ),
        ],
    },
)
