graphql-parser/tests/snapshots/test__parse_schema__minimal_type.snap
---
source: graphql-parser/tests/test.rs
expression: result_unix
---
Ok(
    Document {
        definitions: [
            TypeDefinition(
                Object(
                    ObjectType {
                        position: Pos(1:1),
                        description: None,
                        name: "UndefinedType",
                        implements_interfaces: [],
                        directives: [],
                        fields: [],
                    },
                ),
            ),
        ],
    },
)
