graphql-parser/tests/snapshots/test__parse_schema__scalar_type.snap
---
source: graphql-parser/tests/test.rs
expression: result_unix
---
Ok(
    Document {
        definitions: [
            TypeDefinition(
                Scalar(
                    ScalarType {
                        position: Pos(2:1),
                        description: Some(
                            "This is the best scalar type",
                        ),
                        name: "BestType",
                        directives: [
                            Directive {
                                position: Pos(2:17),
                                name: "perfectness",
                                arguments: [
                                    (
                                        "value",
                                        Int(
                                            Number(
                                                100500,
                                            ),
                                        ),
                                    ),
                                ],
                            },
                        ],
                    },
                ),
            ),
        ],
    },
)
