graphql-parser/tests/snapshots/test__parse_schema__union.snap
---
source: graphql-parser/tests/test.rs
expression: result_unix
---
Ok(
    Document {
        definitions: [
            TypeDefinition(
                Union(
                    UnionType {
                        position: Pos(1:1),
                        description: None,
                        name: "Feed",
                        directives: [],
                        types: [
                            "Story",
                            "Article",
                            "Advert",
                        ],
                    },
                ),
            ),
        ],
    },
)
